# kalitron-ai-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py  uploads.py
app/api/v1/endpoints/: health.py  identity.py  receipts.py
app/core/: config.py  errors.py  security.py
app/models/: requests.py  responses.py
app/pipelines/: base_pipeline.py  identity_pipeline.py  receipt_pipeline.py
app/services/: ai_interfaces.py  anthropic_provider.py  ocr_service.py  ollama_provider.py  openai_provider.py  provider_common.py  provider_factory.py  rules_engine.py  scoring_service.py  vision_service.py
tests/: conftest.py  test_identity.py  test_provider_factory.py  test_receipts.py  test_rules_and_scoring.py
