[tool.poetry]
name = "ai-gateway"
version = "1.0.0"
description = "AI Orchestration Gateway for document validation via OCR and Vision AI"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115" }
pydantic = { extras = ["email"], version = "^2.7" }
pydantic-settings = "^2.3"
anthropic = "^0.40"
openai = "^1.68.2"
httpx = "^0.27"
uvicorn = { extras = ["standard"], version = "^0.30" }
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
